adding sbt stuff. Implementing wiring for view - template from seventhings is built, will modify

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,29 @@
+### Scala ###
 *.class
+*.log
+
+# sbt specific
+.cache/
+.history/
+.lib/
+dist/*
 target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+
+### Vim ###
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
+
 sandbox/
 *.db
+
+
+
